--- a/assets/css/extended.scss
+++ b/assets/css/extended.scss
@@ -1,5 +1,5 @@
-@use 'extended/variables';
-@use 'extended/layout';
-@use 'extended/home';
-@use 'extended/navigation';
-@use 'extended/animations';
+@use 'css/extended/variables';
+@use 'css/extended/layout';
+@use 'css/extended/home';
+@use 'css/extended/navigation';
+@use 'css/extended/animations';
