--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -8,7 +8,9 @@ document.addEventListener("DOMContentLoaded", function() {
     renderMathInElement(document.body, {
         delimiters: [
             {left: "$$", right: "$$", display: true},
-            {left: "$", right: "$", display: false}
+            {left: "$", right: "$", display: false},
+            {left: "\\(", right: "\\)", display: false},
+            {left: "\\[", right: "\\]", display: true}
         ],
         throwOnError: false
     });
